# C_language_practice_University

./: .gitignore  CMakeLists.txt  declarations.h  definitions.c  main.c
exercice1/: CMakeLists.txt  swapfunction  swapfunction.c  swapfunction.h
exercice10/: CMakeLists.txt  fibonacci.c
exercice11/: CMakeLists.txt  somme_tableau.c  somme_tableau.h
exercice12/: input_info.c  input_info.h
exercice13/: file_operations.c  file_operations.h
exercice14/: single_node.c  single_node.h
exercice15/: three_nodes.c  three_nodes.h
exercice16/: push.c  push.h
exercice17/: build_list.c  build_list.h
exercice18/: length.c  length.h
exercice19/: recursive_length.c  recursive_length.h
exercice2/: CMakeLists.txt  minandmaxpointers.c  minandmaxpointers.h
exercice20/: print_list.c  print_list.h
exercice21/: recursive_sum.c  recursive_sum.h
exercice22/: stack.c  stack.h
exercice23/: project_stack.c  project_stack.h
exercice24/: queues.c  queues.h
exercice25/: project_queues.c  project_queues.h  students.txt
exercice3/: CMakeLists.txt  pointercount.c  pointercount.h
exercice4/: CMakeLists.txt  exercice4.c  exercice4.h
exercice5/: CMakeLists.txt  exercice5.c  exercice5.h
exercice6/: CMakeLists.txt  exercice6.c  exercice6.h
exercice7/: CMakeLists.txt  compte_a_rebours.c  compte_a_rebours.h
exercice8/: CMakeLists.txt  somme_chiffres.c  somme_chiffres.h
exercice9/: CMakeLists.txt  chercher_max.c  chercher_max.h
