cmake_minimum_required(VERSION 3.20)
project(practice_exercice C)

set(CMAKE_C_STANDARD 11)

add_executable(exercice1  exercice1/swapfunction.c)
add_executable(exercice2  exercice2/minandmaxpointers.c)
add_executable(exercice3  exercice3/pointercount.c)
add_executable(exercice4  exercice4/exercice4.c)
add_executable(exercice5  exercice5/exercice5.c)
add_executable(exercice6  exercice6/exercice6.c)