cmake_minimum_required(VERSION 4.2)
project(exerice1)

set(CMAKE_CXX_STANDARD 20)

add_executable(exerice1
        swapfunction.c
        swapfunction.h
        ../exercice2/minandmaxpointers.c
        ../exercice3/pointercount.c
        ../exercice4/exercice4.c
        ../exercice5/exercice5.c
        ../exercice6/exercice6.c
        ../exercice23/main.c
        ../exercice7-compte-a-rebours/compte-a-rebours.c
        ../exercice7-compte-a-rebours/compte-a-rebours.h
        ../exercice7-compte-a-rebours/compte-a-rebours.h
        ../exercice7-compte-a-rebours/compte-a-rebours.c
        ../exercice7/compte_a_rebours.h)
